# optico

./: .gitignore  README.md  pyproject.toml
src/optico/: __init__.py  cli.py  ico.py
